
  * debian/changelog: Fix changelog entry in version 111 for #597654: init
    script priority was fixed to S19, not S29.
  * pg_ctlcluster: Also pass additional pg_ctl arguments in "stop" and
    "reload" mode.
  * pg_ctlcluster: Pass correct exit code from pg_ctl in case of errors.
  * PgCommon.pm, get_db_encoding(): Fix uninitialized variable if psql fails.

 -- Martin Pitt <mpitt@debian.org>  Wed, 22 Sep 2010 12:09:16 +0200

postgresql-common (111) unstable; urgency=high

  * Urgency high since this fixes two RC bugs.
  * t/030_errors.t: Check that pg_createcluster leaves the original one intact
    if the cluster already exists, also when the original one is not running.
    This reproduces #597097.
  * pg_createcluster: Be more careful with cleaning up the created cluster if
    an error occurs: Do not start the cleanup until we actually passed our
    sanity checks and created files for the new cluster. Before, it would
    erroneously remove an already existing cluster on a sanity check fail, if
    that cluster happened to not be running at the time. (Closes: #597097)
  * debian/supported-versions: Be more robust against lsb_release failing, e.
    g. in the case where it is not fully configured yet. (Closes: #597561)
  * debian/supported-versions: Drop check for /etc/debian_version if
    lsb_release is not working/existing. Derivatives have debian_version as
    well, and we don't actually evaluate it, so just print a meaningful error
    message and go with the default versions.
  * debian/rules: Put init script priority back to S19/K21 to match the
    previous postgresql-8.4 init script. Fix the priorities on upgrade in
    debian/postgresql-common.preinst. (Closes: #597654)

 -- Martin Pitt <mpitt@debian.org>  Wed, 22 Sep 2010 12:04:00 +0200

postgresql-common (110) unstable; urgency=low

  [ Martin Pitt ]
  * t/080_start.conf.t: Update for common init.d script.
  * debian/rules: Drop installation of lintian overrides and let dh_lintian do